add novelcount and ui swagger
